Full Stack Flutter Application

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
     <application
         android:name="${applicationName}"
-        android:icon="@mipmap/dc_logo"
+        android:icon="@mipmap/launcher_icon"
         android:label="Darvesh Classes">
         <!--  <service
               android:name=".java.MyFirebaseMessagingService"
