--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,12 @@ dependencies:
   fl_chart: ^0.63.0
   file_picker: ^5.3.3
   url_launcher: ^6.1.12
+  flutter_launcher_icons: ^0.13.1
   open_file: ^3.3.2
   flutter_cache_manager: ^3.3.1
   shared_preferences: ^2.2.0
   badges: ^3.1.1
+  video_player: ^2.8.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -80,8 +82,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - media/DC_logo_2.png
-    - media/google-logo.svg
     - media/serviceAccount.json
+    - media/DC_Intro.mp4
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -110,3 +112,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "media/DC_logo_2.png"
+  min_sdk_android: 21
